--- a/src/styles/Exercises.module.scss
+++ b/src/styles/Exercises.module.scss
@@ -17,8 +17,7 @@
         width: 100%;
         // background-color: red;
         font-size: 24px;
-        // font-weight: 800;
-        font-weight: bold;
+        font-weight: 700;
         color: #0d30ac;
         display: flex;
         align-items: center;
