--- a/src/styles/ClientList.module.scss
+++ b/src/styles/ClientList.module.scss
@@ -1,4 +1,5 @@
 .rootClientlist {
+    height: fit-content;
     width: 90%;
     border: 4px solid #d6e1fe;
     border-radius: 20px;
@@ -8,11 +9,13 @@
     align-items: center;
     justify-content: center;
 
+    padding: 1rem 0;
+
     // box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
     box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
     .heading {
         display: flex;
-        width: 95%;
+        width: 92%;
         align-items: center;
         justify-content: space-between;
 
@@ -45,7 +48,7 @@
     }
 
     table {
-        width: 100%;
+        width: 95%;
         margin-top: 20px;
 
         // background-color: red;
@@ -62,18 +65,19 @@
         }
 
         td {
-            font-weight: 700;
+            font-weight: 500;
             font-size: 20px;
-            padding: 20px;
+            padding: 20px 15px;
+            // margin: 20px;
+            height: 50px;
             text-align: center;
             color: #4d98ed;
-
-            // background-color: red;
         }
 
         .profilePic {
-            width: 65px;
-            height: 65px;
+            width: 3rem;
+            height: 3rem;
+            padding: 6px;
 
             // background-color: yellow;
             img {
