--- a/src/styles/Exercises.module.scss
+++ b/src/styles/Exercises.module.scss
@@ -13,10 +13,10 @@
     justify-content: center;
 
     .heading {
-        height: 50px;
+        height: 4rem;
         width: 100%;
         // background-color: red;
-        font-size: 24px;
+        font-size: 1.5rem;
         font-weight: 700;
         color: #0d30ac;
         display: flex;
@@ -26,10 +26,10 @@
     }
 
     .cardsContainer {
-        width: 80%;
+        width: 100%;
         height: 100%;
 
-        padding-top: 2vw;
+        padding-top: 1.5vw;
 
         display: flex;
         flex-wrap: wrap;
@@ -41,8 +41,8 @@
         .exercises {
             margin: 1rem;
             overflow: hidden;
-            width: 200px;
-            height: 270px;
+            width: 10vw;
+            height: 14vw;
 
             border: 4px solid white;
             border-radius: 20px;
@@ -86,11 +86,11 @@
                 }
 
                 .count {
-                    margin-left: 4px;
+                    margin-left: 0.1vw;
                     height: 80%;
                     // background-color: red;
                     span {
-                        font-size: 20px;
+                        font-size: 1.3rem;
                         font-weight: 700;
                         color: #0d30ac;
                     }
@@ -113,7 +113,7 @@
 
                 span {
                     color: #614d8f;
-                    size: 14px;
+                    size: 1.2px;
                     font-weight: 600;
                 }
                 // left: 30%;
