Designed Exercises Page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
     font-family: "Raleway", sans-serif;
     /* max-width: 2200px; */
-
-    
 }
 
+:root {
+    --secondary-color: #614d8f;
+}
