--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -79,6 +79,9 @@
         .bottom {
             overflow-y: scroll;
 
+            padding-top: 2.06rem;
+            padding-left: 1.81rem;
+
             width: 100%;
             height: 100%;
             border-top-left-radius: 20px;
