--- a/src/pages/Exercises/ExercisesPage.module.scss
+++ b/src/pages/Exercises/ExercisesPage.module.scss
@@ -1,7 +1,58 @@
 .rootExercises {
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    margin: 0 2vw;
+
+    .header {
+        margin-bottom: 2vw;
+        width: 95%;
+        top: 0;
+        display: flex;
+        justify-content: space-between;
+
+        .title {
+            width: 30%;
+            p {
+                font-weight: 700;
+                font-size: 36px;
+                color: #3b3c40;
+            }
+        }
+
+        .buttons {
+            width: 13%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .addExercise {
+                button {
+                    height: 2.5vw;
+                    width: 6vw;
+                    background-color: #3855b7;
+                    border: none;
+                    font-size: 1.5em;
+                    font-weight: 600;
+                    color: #e7f3ff;
+                    border-radius: 25px;
+                }
+            }
+
+            .toggle {
+                height: 2.5vw;
+                width: 2vw;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .icon {
+                    height: inherit;
+                    width: 100%;
+                }
+            }
+        }
+    }
 
     .container {
         display: flex;
@@ -9,17 +60,11 @@
         align-items: center;
         width: 90%;
 
-        .toggleButton {
-            margin-bottom: 1em;
-        }
-
         .listContainer {
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             width: 100%;
-
-            // background-color: red;
 
             .card {
                 width: 36vw;
