Made Dashboard Dynamic

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -61,6 +61,10 @@
                         color: #0d30ac;
                     }
                 }
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
     }
