--- a/src/pages/Exercises/ExerciseDetails.module.scss
+++ b/src/pages/Exercises/ExerciseDetails.module.scss
@@ -27,6 +27,66 @@
                     border-radius: 20px;
                 }
             }
+
+            .aboutContainer {
+                margin-top: 2vw;
+
+                .info {
+                    display: flex;
+                    flex-direction: row;
+                    width: 80%;
+                    height: 7vw;
+                    justify-content: space-between;
+
+                    .items {
+                        // margin-bottom: 100px;
+
+                        width: 6vw;
+                        height: 5vw;
+                        background-color: #e7f3ffbf;
+                        border-radius: 10px;
+
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        padding: 1vw 0.5vw;
+
+                        // background-color: red;
+
+                        .logo {
+                            // background-color: red;
+                            height: 60%;
+                            width: 100%;
+
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            .icons {
+                                height: 1.8vw;
+                                width: auto;
+                            }
+                        }
+
+                        p {
+                            margin-top: 0.2vw;
+                            text-align: center;
+                            font-weight: 600;
+                            font-size: 0.9vw;
+                            color: #614d8f;
+                            padding: 0 2vw;
+                        }
+                    }
+                }
+                .aboutTitle {
+                    height: 3vw;
+                    p {
+                        font-weight: 700;
+                        font-size: 24px;
+                        color: #614d8f;
+                    }
+                }
+            }
         }
 
         .right {
