--- a/src/pages/Exercises/ExerciseDetails.module.scss
+++ b/src/pages/Exercises/ExerciseDetails.module.scss
@@ -91,18 +91,40 @@
 
         .right {
             padding-left: 2vw;
+            padding-right: 2vw;
             width: 71%;
 
             .descriptionContainer {
                 // height: 12vw;
                 padding-bottom: 2vw;
                 .descriptionTitle {
-                    font-size: 36px;
-                    font-weight: 700;
-                    height: 4vw;
-                    width: 100%;
+                    width: 95%;
+                    // background-color: #614d8f;
+                    margin-bottom: 1vw;
+
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+
                     p {
+                        font-size: 36px;
+                        font-weight: 700;
                         color: #3b3c40;
+                    }
+
+                    div {
+                        background-color: #e7f3ff;
+                        border-radius: 50%;
+                        height: 2vw;
+                        width: 2vw;
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        .icon {
+                            height: 60%;
+                            width: 60%;
+                        }
                     }
                 }
 
