--- a/src/pages/Exercises/ExercisesPage.module.scss
+++ b/src/pages/Exercises/ExercisesPage.module.scss
@@ -103,12 +103,31 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
-                    // background-color: aqua;
-                    h3 {
-                        font-weight: 600;
-                        font-size: 1.25em;
-                        color: var(--secondary-color);
-                        margin-bottom: 5%;
+
+                    .titleBar {
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        height: 2vw;
+
+                        h3 {
+                            display: block;
+                            font-weight: 600;
+                            font-size: 1.25em;
+                            color: var(--secondary-color);
+                            margin-bottom: 5%;
+                        }
+
+                        .icon {
+                            height: 1.5vw;
+                            width: 1.22vw;
+
+                            .dots {
+                                height: 100%;
+                                width: 100%;
+                                color: #361f69;
+                            }
+                        }
                     }
 
                     p {
