--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -8,7 +8,7 @@
     justify-content: center;
 
     .userPicture {
-        background-color: red;
+        // background-color: red;
         overflow: hidden;
         width: 8vw;
         height: 8vw;
