--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -82,6 +82,7 @@
 
         .bottom {
             overflow-y: scroll;
+            overflow-x: hidden;
 
             padding-top: 2.06rem;
             padding-left: 1.81rem;
