--- a/src/pages/Clients/ClientsPage.module.scss
+++ b/src/pages/Clients/ClientsPage.module.scss
@@ -39,7 +39,7 @@
 
             .card {
                 width: 36vw;
-                height: 6vw;
+                // height: 6vw;
                 margin-bottom: 1em;
             }
 
@@ -65,6 +65,7 @@
                         height: 3vw;
                         border-radius: 50%;
                         overflow: hidden;
+                        object-fit: cover;
                         // width: 100%;
                         // height: 100%;
                     }
