--- a/src/pages/ClientsRequest/ClientsRequest.module.scss
+++ b/src/pages/ClientsRequest/ClientsRequest.module.scss
@@ -40,13 +40,10 @@
 
             .card {
                 width: 36vw;
-                height: 6vw;
+                height: fit-content;
                 margin-bottom: 1em;
-            }
-
-            .card {
-                background-color: #e7f3ff;
-                padding: 2rem;
+                // background-color: #e7f3ff;
+                padding: 0.5vw;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -54,58 +51,73 @@
                 justify-content: space-between;
                 border-radius: 1vw;
 
+                box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
                 .imageContainer {
-                    // width: 3vw;
-                    // height: 3vw;
-                    // border-radius: 50%;
-                    // overflow: hidden;
-                    // background-color: red;
                     width: 15%;
+                    // background-color: red;
                     .profilePicture {
                         width: 3vw;
                         height: 3vw;
                         border-radius: 50%;
                         overflow: hidden;
-                        // width: 100%;
-                        // height: 100%;
+
+                        object-fit: cover;
                     }
                 }
 
                 .textContainer {
                     // background-color: yellow;
-                    width: 80%;
+                    width: 85%;
 
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
                     align-items: center;
+
                     .username {
                         p {
                             font-weight: 600;
                             font-size: 1.53rem;
-                            color: #0d1dac;
+                            // color: #0d1dac;
+                            color: #000000;
                         }
                     }
 
                     .buttons {
-                        margin-right: 2vw;
-                        width: 5vw;
-                        height: 2vw;
-                        border-radius: 40px;
-                        border: 1px solid #361f69;
-
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        p {
-                            // padding: 1rem;
-                            font-weight: 600;
-                            font-size: 1.28rem;
-                            color: #361f69;
+
+                        .accept,
+                        .decline {
+                            border: 1px solid #000000;
+                            border-radius: 15px;
+                            padding: 10px 15px;
+                            margin: 0 10px;
+                            p {
+                                font-weight: 600;
+                                font-size: 1.28rem;
+                                color: #000000;
+                                transition: color 0.3s;
+                            }
                         }
 
-                        &:hover {
+                        .accept:hover {
                             cursor: pointer;
+                            background-color: green;
+                            transition: background-color 0.3s;
+                            p {
+                                color: #ffffff;
+                            }
+                        }
+
+                        .decline:hover {
+                            cursor: pointer;
+                            background-color: red;
+                            transition: background-color 0.3s;
+                            p {
+                                color: #ffffff;
+                            }
                         }
                     }
                 }
