--- a/src/pages/ClientsRequest/ClientsRequest.module.scss
+++ b/src/pages/ClientsRequest/ClientsRequest.module.scss
@@ -39,10 +39,10 @@
             width: 100%;
 
             .card {
-                width: 36vw;
+                width: 70vw;
                 height: fit-content;
                 margin-bottom: 1em;
-                // background-color: #e7f3ff;
+                // background-color: #e7f3ff;   
                 padding: 0.5vw;
                 display: flex;
                 flex-direction: row;
@@ -74,12 +74,20 @@
                     justify-content: space-between;
                     align-items: center;
 
-                    .username {
-                        p {
-                            font-weight: 600;
-                            font-size: 1.53rem;
-                            // color: #0d1dac;
-                            color: #000000;
+                    .info {
+                        width: 70%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        .username,
+                        .userEmail,
+                        .userAccDate {
+                            p {
+                                font-weight: 500;
+                                font-size: 1.53rem;
+                                // color: #0d1dac;
+                                color: #000000;
+                            }
                         }
                     }
 
