--- a/src/styles/ClientList.module.scss
+++ b/src/styles/ClientList.module.scss
@@ -44,6 +44,9 @@
                 font-weight: 500;
                 font-size: 16px;
             }
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 
