--- a/src/pages/Clients/HealthData.module.scss
+++ b/src/pages/Clients/HealthData.module.scss
@@ -45,13 +45,30 @@
 
                 display: flex;
                 align-items: center;
-                justify-content: center ;
+                justify-content: center;
 
                 .inner {
                     width: 250px;
                     height: 250px;
-                    background-color: white;
                     border-radius: 50%;
+                    border: 15px solid #ffffff;
+
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+
+                    .data {
+                        font-weight: 600;
+                        font-size: 53px;
+                        color: #ffffff;
+                    }
+
+                    .tag {
+                        font-size: 25px;
+                        font-weight: 600;
+                        color: #ffffff;
+                    }
                 }
             }
         }
