--- a/src/pages/Clients/ClientDetails.module.scss
+++ b/src/pages/Clients/ClientDetails.module.scss
@@ -44,7 +44,7 @@
         .clientInfo {
             width: 100%;
             height: 60%;
-            background-color: yellow;
+            // background-color: yellow;
 
             .data {
                 height: 100%;
@@ -54,10 +54,12 @@
         }
 
         .bottomContainer {
+            margin-top: 70px;
+
             width: 100%;
             height: 40%;
 
-            background-color: red;
+            // background-color: red;
 
             display: flex;
             flex-direction: row;
