--- a/src/pages/Clients/HealthData.module.scss
+++ b/src/pages/Clients/HealthData.module.scss
@@ -1,11 +1,11 @@
 .rootHealthData {
     width: 100%;
     height: 100%;
-    background-color: blue;
+    // background-color: blue;
 
     .heading {
         height: 15%;
-        background-color: yellow;
+        margin-bottom: 30px;
         p {
             font-size: 32px;
             font-weight: 600;
@@ -22,10 +22,10 @@
             width: 25%;
             height: 100%;
             // margin: auto;
-            background-color: pink;
+            // background-color: pink;
             .head {
                 height: 10%;
-                background-color: red;
+                // background-color: red;
                 p {
                     font-size: 20px;
                     font-weight: 600;
@@ -68,6 +68,60 @@
                         font-size: 25px;
                         font-weight: 600;
                         color: #ffffff;
+                    }
+                }
+            }
+        }
+
+        .weight {
+            width: 25%;
+            height: 100%;
+            // margin: auto;
+            // background-color: pink;
+            .head {
+                height: 10%;
+                // background-color: red;
+                p {
+                    font-size: 20px;
+                    font-weight: 600;
+                }
+            }
+
+            .pieChart {
+                margin: auto;
+                width: 320px;
+                height: 320px;
+                border-radius: 50%;
+                background: white;
+
+                box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+                    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                .inner {
+                    width: 250px;
+                    height: 250px;
+                    border-radius: 50%;
+                    border: 15px solid #6c9fff;
+
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+
+                    .data {
+                        font-weight: 600;
+                        font-size: 53px;
+                        color: #000000;
+                    }
+
+                    .tag {
+                        font-size: 25px;
+                        font-weight: 600;
+                        color: #000000;
                     }
                 }
             }
