--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -20,7 +20,7 @@
             padding-bottom: 2vw;
             p {
                 font-weight: 600;
-                font-size: 80px;
+                font-size: 5vw;
                 color: #0d30ac;
             }
         }
@@ -53,7 +53,7 @@
 
                     .label {
                         font-weight: 600;
-                        font-size: 24px;
+                        font-size: 1.5vw;
                         color: #0d30ac;
 
                         margin-bottom: 15px;
@@ -83,18 +83,18 @@
                         }
 
                         .inputEmail {
-                            width: 90%;
-                            height: 100%;
+                            // width: 90%;
+                            // height: 100%;
                             // background-color: red;
 
                             input {
-                                width: 90%;
-                                height: 100%;
+                                width: 20vw;
+                                height: 5dvh;
                                 outline: none;
                                 border: none;
                                 background-color: #f8f8f8;
 
-                                font-size: 18px;
+                                font-size: 22px;
                                 font-weight: 500;
                                 color: #0d30ac;
 
@@ -121,15 +121,16 @@
                         margin-bottom: 15px;
                         .pass {
                             font-weight: 600;
-                            font-size: 24px;
+                            font-size: 1.5vw;
                             color: #0d30ac;
                             display: block;
                         }
 
                         .forgot {
+                            // margin-bottom:% ;
                             display: block;
 
-                            font-size: 18px;
+                            font-size: 1vw;
                             font-weight: 600;
                             color: #0d30ac;
 
@@ -166,13 +167,9 @@
                         }
 
                         .inputPassword {
-                            width: 90%;
-                            height: 100%;
-                            // background-color: red;
-
                             input {
-                                width: 90%;
-                                height: 100%;
+                                width: 20vw;
+                                height: 5vh;
                                 outline: none;
                                 border: none;
                                 background-color: #f8f8f8;
@@ -190,7 +187,7 @@
                 }
 
                 .buttons {
-                    width: 100%;
+                    width: 25vw;
                     height: 8rem;
                     // background-color: red;
 
@@ -211,7 +208,7 @@
 
                         p {
                             color: white;
-                            font-size: 20px;
+                            font-size: 1.2vw;
                             font-weight: 600;
                         }
 
@@ -221,12 +218,12 @@
                     }
 
                     .signup {
-                        width: 50%;
+                        width: 11vw;
 
                         span {
                             display: block;
                             text-align: center;
-                            font-size: 18px;
+                            font-size: 1vw;
                             font-weight: 600;
                             color: #0d30ac;
 
@@ -244,10 +241,11 @@
             }
 
             .right {
-                width: 34rem;
-                height: 34rem;
+                width: 30vw;
+                height: 55vh;
                 // background-color: red;
                 border: 1px solid #d9d9ff;
+                margin-left: 10%;
 
                 border-radius: 50%;
 
@@ -260,6 +258,46 @@
                     height: auto;
                 }
             }
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .password {
+        .input {
+            height: 2rem !important;
+        }
+    }
+
+    .email {
+        .input {
+            height: 2rem !important;
+        }
+    }
+
+    .buttons {
+        .signin {
+            width: 43% !important;
+            height: 28% !important;
+        }
+    }
+
+    .containerMain {
+        .header {
+            padding-bottom: 0vw !important;
+            top: 10% !important;
+            position: absolute !important;
+            left: 43% !important;
+        }
+
+        .left {
+            margin-top: 20% !important;
+        }
+
+        .right {
+            margin-top: 12% !important;
+            margin-right: -21% !important;
+            height: 45vh !important;
         }
     }
 }
