--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -76,7 +76,7 @@
         width: 100%;
 
         .top {
-            height: 6vw;
+            height: min-content;
             width: 100%;
         }
 
