--- a/src/pages/Chat/Chats.module.scss
+++ b/src/pages/Chat/Chats.module.scss
@@ -1,12 +1,13 @@
 .rootChats {
     display: flex;
     flex-direction: column;
-    align-items: end;
-    // background-color: #0d1dac;
-    background-color: #f9fbff;
+    align-items: flex-end;
+    background-color: #0d1dac;
+    // background-color: #f9fbff;
     border-radius: 16px;
 
     width: 95%;
+    height: 80vh;
 
     // position: relative;
 
@@ -17,8 +18,8 @@
         flex-direction: row;
         align-items: center;
         // justify-content: center;
-        margin-bottom: 50px;
-        // background-color: aliceblue;
+        // margin-bottom: 50px;
+        background-color: aliceblue;
 
         .userImage {
             width: 3vw;
@@ -52,10 +53,13 @@
         display: flex;
         flex-direction: column;
         // align-items: end;
-        height: fit-content;
+        // height: 80%;
+        flex-grow: 1;
+        overflow: hidden;
         width: 95%;
-        margin: 0 auto;
-        // background-color: red;
+        // margin: 0 auto;
+        background-color: pink;
+        overflow-y: scroll;
 
         .message {
             &.received {
@@ -76,7 +80,7 @@
 
             &.sent {
                 display: flex;
-                justify-content: end;
+                justify-content: flex-end;
                 max-width: 100%;
                 // background-color: yellow;
 
@@ -97,20 +101,31 @@
     .chatInput {
         // position: fixed;
         // bottom: 50px;
-        width: 90%;
+        width: 77.6%;
+        // height: 500px;
         margin: 0 auto;
-        background-color: white;
+        background-color: red;
+        // background-color: white;
         border-radius: 16px;
         box-shadow: 0px 4px 8px 0px #cfdfff40;
 
+        display: flex;
+        // align-items: center;
+        justify-content: center;
+
         .inputContainer {
             background-color: white;
-            position: fixed;
+            // position: fixed;
             bottom: 50px;
-            width: 1400px;
+            // width: 1400px;
+            width: 95%;
             height: 69px;
             outline: 1px solid transparent;
             border-radius: 16px;
+
+            display: flex;
+            align-items: center;
+
             input {
                 height: 100%;
                 width: 87%;
