--- a/src/pages/Clients/ClientDetails.module.scss
+++ b/src/pages/Clients/ClientDetails.module.scss
@@ -63,26 +63,34 @@
 
             display: flex;
             flex-direction: row;
+            align-items: center;
 
             .graph {
-                width: 50%;
-                height: 100%;
-                // background-color: greenyellow;
+                width: fit-content;
+                height: fit-content;
+                background: linear-gradient(
+                    123.33deg,
+                    #7fa5ed -88.05%,
+                    #0d30ac 167.83%
+                );
+                border-radius: 56px;
+
+                padding: 25px 50px;
             }
+
             .buttons {
                 width: 30%;
                 height: 100%;
                 // background-color: pink;
 
                 display: flex;
-                justify-content: center;
+                justify-content: flex-end;
                 align-items: center;
 
                 .buttonsContainer {
                     display: flex;
                     flex-direction: column;
                     align-items: flex-end;
-                    // background-color: black;
                     .assign {
                         width: fit-content;
                         height: fit-content;
