--- a/src/styles/Dashboard.module.scss
+++ b/src/styles/Dashboard.module.scss
@@ -2,7 +2,6 @@
     height: 100%;
     width: 100%;
 
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -14,9 +13,22 @@
 
         .graphs {
             margin-top: 2rem;
-            // background-color: red;
-            width: 100%;
-            height: 300px;
+
+            .leftGraph {
+            }
+
+            .rightGraph {
+                width: fit-content;
+                height: fit-content;
+                background: linear-gradient(
+                    123.33deg,
+                    #7fa5ed -88.05%,
+                    #0d30ac 167.83%
+                );
+                border-radius: 22px;
+
+                padding: 25px 50px;
+            }
         }
 
         .clientLists {
