--- a/src/pages/Chat/Chats.module.scss
+++ b/src/pages/Chat/Chats.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    background-color: #0d1dac;
+    // background-color: #0d1dac;
     // background-color: #f9fbff;
     border-radius: 16px;
 
@@ -19,7 +19,6 @@
         align-items: center;
         // justify-content: center;
         // margin-bottom: 50px;
-        background-color: aliceblue;
 
         .userImage {
             width: 3vw;
@@ -52,14 +51,14 @@
     .chatMessages {
         display: flex;
         flex-direction: column;
-        // align-items: end;
-        // height: 80%;
         flex-grow: 1;
-        overflow: hidden;
         width: 95%;
-        // margin: 0 auto;
-        background-color: pink;
+        // background-color: pink;
         overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            width: 0;
+        }
 
         .message {
             &.received {
@@ -99,39 +98,35 @@
     }
 
     .chatInput {
-        // position: fixed;
-        // bottom: 50px;
-        width: 77.6%;
-        // height: 500px;
+        width: 80%;
         margin: 0 auto;
-        background-color: red;
-        // background-color: white;
+        // background-color: red;
         border-radius: 16px;
         box-shadow: 0px 4px 8px 0px #cfdfff40;
 
         display: flex;
-        // align-items: center;
         justify-content: center;
 
         .inputContainer {
             background-color: white;
-            // position: fixed;
-            bottom: 50px;
-            // width: 1400px;
-            width: 95%;
-            height: 69px;
+
+            width: 100%;
+            height: 65px;
             outline: 1px solid transparent;
             border-radius: 16px;
 
             display: flex;
             align-items: center;
 
+            padding: 0 20px;
+
             input {
                 height: 100%;
                 width: 87%;
                 border-radius: 16px;
-                // background-color: #0177fd;
                 outline: 1px solid transparent;
+
+                font-size: 18px;
             }
             .sendButton {
                 width: 160px;
