--- a/src/pages/Settings/Settings.scss
+++ b/src/pages/Settings/Settings.scss
@@ -265,6 +265,7 @@
                             rgba(0, 0, 0, 0.25);
                         border-radius: 10px;
                         border: none;
+                        resize: none;
                     }
                 }
             }
