--- a/src/styles/Chart.css
+++ b/src/styles/Chart.css
@@ -1,3 +1,8 @@
-.line-chart {
-    width: 500px;
+.lineChart {
+    background: linear-gradient(123.33deg, #7fa5ed -88.05%, #0d30ac 167.83%);
+    width: 450px;
+    /* width: 1420px; */
+
+    /* padding: 50px; */
+    /* border-radius: 25px; */
 }
