--- a/src/pages/Clients/ClientData.scss
+++ b/src/pages/Clients/ClientData.scss
@@ -121,6 +121,10 @@
 
                 // justify-content: center; align-items: center; gap: 8px;
                 //  display: inline-flex;
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
 
@@ -146,6 +150,10 @@
                 word-wrap: break-word;
                 border-radius: 8px;
                 border: none;
+
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
     }
