--- a/src/pages/Clients/ClientDetails.module.scss
+++ b/src/pages/Clients/ClientDetails.module.scss
@@ -5,33 +5,56 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        // justify-content: center;
+        justify-content: space-between;
 
-        .userImage {
-            width: 3vw;
-            height: 3vw;
-
+        .headerContainer {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: 50%;
-                object-fit: cover;
+            width: 14%;
+            justify-content: space-between;
+
+            .userImage {
+                width: 3vw;
+                height: 3vw;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                    object-fit: cover;
+                }
+            }
+
+            .userName {
+                // width: 13%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                p {
+                    font-weight: 600;
+                    font-size: 2.5rem;
+                    color: #0d1dac;
+                }
             }
         }
 
-        .userName {
-            width: 13%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            p {
-                font-weight: 600;
-                font-size: 2.5rem;
-                color: #0d1dac;
+        .buttons {
+            padding: 11px 30px;
+            background-color: #6c9fff;
+            border-radius: 80px;
+
+            .button {
+                background-color: transparent;
+                border: none;
+                color: #ffffff;
+                font-size: 20px;
+                font-weight: 500;
             }
+        }
+        &:hover {
+            cursor: pointer;
         }
     }
 
